# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\MemberController;
+use App\Http\Controllers\AccessTokenController;
 
 /*
 |--------------------------------------------------------------------------
@@ -15,28 +16,30 @@ use App\Http\Controllers\MemberController;
 |
 */
 
+
+Route::get('/aaa', [MemberController::class, 'test']);
+
 Route::group([
-    'middleware' => 'api',
-], function ($router) {
+    'prefix' => 'v1'
+], function (){
 
-
-//    // 이메일 인증 route
-//    Route::get('/{verifyKey}/{id}', [MemberController::class, 'changePwdVerification'])->name('davinci.verification');
-
-
+    /**
+     * 회원 관련
+     */
     Route::group([
-        'prefix' => 'v1'
-    ], function ($router){
+        'prefix' => 'member'
+    ], function (){
 
-        /**
-         * 회원 관련
-         */
+        // 회원가입
+        Route::post('', [MemberController::class, 'register']);
+
+        // 로그인
+        Route::post('/auth', [AccessTokenController::class, 'issueToken']);
+
+        // 인증 필요
         Route::group([
-            'prefix' => 'member'
-        ], function ($router){
-            // 회원가입
-            Route::post('', [MemberController::class, 'register']);
-
+            'middleware' => 'auth:api',
+        ], function () {
             // 회원정보
             Route::get('', [MemberController::class, 'info']);
 
@@ -45,56 +48,61 @@ Route::group([
 
             // 로그아웃
             Route::delete('/auth', [MemberController::class, 'logout']);
-
-            /**
-             * 비밀번호 변경
-             */
-            Route::group([
-                'prefix' => 'password'
-            ], function($router){
-
-                // 비밀번호 검증
-                Route::post('', [MemberController::class, 'checkPassword']);
-
-                // 비밀번호 변경
-                Route::patch('', [MemberController::class, 'modifyPassword']);
-            });
-
-            /**
-             * 비밀번호 찾기 프로세스
-             */
-            // 비밀번호 변경 링크 발송
-            Route::post('/passwordResetSendLink', [MemberController::class, 'passwordResetSendLink']);
-
-            // 비밀번호 변경 링크 유효성 체크
-            Route::post('/checkChangePwdAuth', [MemberController::class, 'changePwdVerification']);
-
-            // 비밀번호 변경 링크 발송 후 변경
-            Route::patch('/passwordReset', [MemberController::class, 'passwordReset']);
-
-
         });
 
+
+        /**
+         * 비밀번호 변경
+         */
         Route::group([
-            'prefix' => 'login'
-        ], function($router){
-            Route::post('', [MemberController::class, 'login']);
+            'prefix' => 'password',
+            'middleware' => 'auth:api',
+        ], function(){
+            // 비밀번호 검증
+            Route::post('', [MemberController::class, 'checkPassword']);
+
+            // 비밀번호 변경
+            Route::patch('', [MemberController::class, 'modifyPassword']);
         });
 
-        // 회원가입시 인증 메일 발송
-        Route::group([
-            'prefix' => 'email'
-        ], function($router){
-            // 이메일 인증 route
-            Route::get('/{verifyKey}/{id}', [MemberController::class, 'verification'])->name('verification.verify');
+        /**
+         * 비밀번호 찾기 프로세스
+         */
+        // 비밀번호 변경 링크 발송
+        Route::post('/passwordResetSendLink', [MemberController::class, 'passwordResetSendLink']);
 
+        // 비밀번호 변경 링크 유효성 체크
+        Route::post('/checkChangePwdAuth', [MemberController::class, 'changePwdVerification']);
+
+        // 비밀번호 변경 링크 발송 후 변경
+        Route::patch('/passwordReset', [MemberController::class, 'passwordReset']);
+
+
+    });
+
+
+    // 회원가입시 인증 메일 발송
+    Route::group([
+        'prefix' => 'email'
+    ], function($router){
+        // 이메일 인증 route
+        Route::get('/{verifyKey}/{id}', [MemberController::class, 'verification'])->name('verification.verify');
+
+        // 인증 필요
+        Route::group([
+            'middleware' => 'auth:api',
+        ], function () {
+
+            // 이메일 인증 재발송
             Route::post('/verificationResend', [MemberController::class, 'verificationResend']);
+
         });
+
+    });
 
 
 //        Route::post('/logout', [AuthController::class, 'logout']);
 
-    });
 
 //    Route::group([
 //        'prefix' => 'v2'
@@ -103,6 +111,8 @@ Route::group([
 //        Route::get('/user-profile', [AuthController::class, 'userProfile']);
 //
 //    });
+
+
 });
 
 // 관리자
